--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,7 +27,8 @@ body {
   height: 100vh;
   margin: 0 auto;
   display: flex;
-  flex-direction: row; }
+  flex-direction: column;
+  justify-content: center; }
 
 /* search box */
 .search {
@@ -153,13 +154,15 @@ body {
     background-color: #fff;
     width: 78rem;
     height: 26rem;
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     border-radius: 1rem;
     text-transform: capitalize;
-    letter-spacing: .03rem; }
+    letter-spacing: .03rem;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; }
     .card_wrapper .card .card__left {
       display: flex;
       flex-direction: column;
@@ -235,6 +238,11 @@ body {
           padding: 0 .5rem;
           color: #323232;
           font-weight: 700; }
+        .card_wrapper .card .card__center .extra__info div {
+          display: flex;
+          flex-direction: row; }
+          .card_wrapper .card .card__center .extra__info div p {
+            text-transform: capitalize; }
     .card_wrapper .card .card__right {
       padding-right: 3rem;
       display: flex;
@@ -257,4 +265,56 @@ body {
         .card_wrapper .card .card__right span:hover {
           cursor: pointer; }
 
-/*# sourceMappingURL=main.css.map */
+.toast {
+  width: auto;
+  visibility: hidden;
+  background-color: #0173FF;
+  position: fixed;
+  bottom: 4rem;
+  left: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px; }
+  .toast .toast__message {
+    color: #fff;
+    padding: 1.6rem;
+    font-size: 1.5rem;
+    font-weight: 600; }
+
+.show {
+  left: 42%;
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 2s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, expand 0.5s 0.5s, stay 3s 1s, shrink 0.5s 4s, fadeout 0.5s 4.5s; }
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0; }
+  to {
+    bottom: 3rem;
+    opacity: 1; } }
+@keyframes expand {
+  from {
+    min-width: 5rem; }
+  to {
+    min-width: 35rem; } }
+@keyframes stay {
+  from {
+    min-width: 35rem; }
+  to {
+    min-width: 35rem; } }
+@keyframes shrink {
+  from {
+    min-width: 35rem; }
+  to {
+    min-width: 5rem; } }
+@keyframes fadeout {
+  from {
+    bottom: 3rem;
+    opacity: 1; }
+  to {
+    bottom: 6rem;
+    opacity: 0; } }
