--- a/assets/scss/_layoyt.scss
+++ b/assets/scss/_layoyt.scss
@@ -29,5 +29,6 @@ body{
     height: 100vh;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
 }
